# data-reuse-analysis

DataReuse/: README.md  build.sh  test.sh
DataReuse/example/: jacobi.c  jacobi_bkp  kernel.cpp  loop.c  matrix.cpp  proximity.cpp  test.c
DataReuse/src/: CMakeLists.txt
DataReuse/src/data-analysis/: CMakeLists.txt  DataAnalysis.cpp  ForList.cpp
DataReuse/src/data-reuse/: CMakeLists.txt  DRA_ASTConsumer.cpp  DRA_ASTConsumer.h  DRA_Visitor.cpp  DRA_Visitor.h  DataReuse.cpp  DataReuse.h  Kernel.cpp  Kernel.h  Loop.cpp  Loop.h
DataReuse/src/kernel/: CMakeLists.txt  Kernel.cpp
DataReuse/src/kernel-info/: CMakeLists.txt  KernelInfo.cpp
DataReuse/src/loop/: CMakeLists.txt  Loop.cpp
DataReuse/src/proximity/: CMakeLists.txt  Proximity.cpp
examples/: Makefile
examples/bfs/: Makefile  README.md  bfs.cpp  run
examples/gauss/: Makefile  gs_openmp_target.c  run  run6  run7
examples/hotspot/: Makefile  run_offload  run_offload6  run_offload7
examples/jacobi/: Makefile  README.md  jacobi.c  run  run6  run7
examples/lud/: Makefile  README.md  common.c  lud.c  run  run6  run7
examples/mm/: Makefile  README.md  mm.c  run  run6  run7
examples/nn/: Makefile  filelist  filelist_4  run  run6  run7
examples/nw/: Makefile  README.md  needle.cpp  run  run6  run7
examples/particlefilter/: Makefile  run  run6  run7
examples/saxpy/: Makefile  run  run6  run7  saxpy.c
